--- a/incubator/node/templates/pvc.yaml
+++ b/incubator/node/templates/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "node.fullname" . }}
   labels:
     app: {{ template "node.name" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "node.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
   annotations:
