--- a/incubator/node/values.yaml
+++ b/incubator/node/values.yaml
@@ -2,7 +2,7 @@
 ## ref: https://hub.docker.com/r/bitnami/node/tags/
 ##
 image: bitnami/node:9.5.0-r0-prod
-devImage: bitnami/node:9.5.0-r0
+gitImage: alpine/git
 
 ## Specify a imagePullPolicy
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -19,7 +19,7 @@ revision: master
 
 ## Specify the number of replicas for the application
 ##
-replicas: 3
+replicas: 1
 
 ## Specify the port where your applucation will be running
 ##
