--- a/stable/parse/templates/server-deployment.yaml
+++ b/stable/parse/templates/server-deployment.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: {{ template "parse.fullname" . }}
-        image: "{{ .Values.server.image }}"
-        imagePullPolicy: {{ .Values.server.imagePullPolicy | quote }}
+        image: "{{ .Values.server.image.registry }}/{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}"
+        imagePullPolicy: {{ default .Values.server.image.pullPolicy | quote }}
         env:
         - name: PARSE_HOST
           value: "0.0.0.0"
