--- a/incubator/elasticsearch/values.yaml
+++ b/incubator/elasticsearch/values.yaml
@@ -5,13 +5,21 @@ name: elastic
 
 ## Elasticsearch image
 ## ref: https://hub.docker.com/r/bitnami/elasticsearch/tags/
-image: bitnami/elasticsearch:5.5.2-r1
- 
-## Specify a imagePullPolicy
-## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-##
-pullPolicy: IfNotPresent
-
+image:
+  registry: docker.io
+  repository: bitnami/elasticsearch
+  tag: 5.5.2
+  ## Specify a imagePullPolicy
+  ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+  ##
+  pullPolicy: IfNotPresent
+  ## Optionally specify an array of imagePullSecrets.
+  ## Secrets must be manually created in the namespace.
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  ##
+  # pullSecrets:
+  #   - myRegistrKeySecretName 
 
 ## The serviceAccountName to be used, required by the elasticsearch-cloud-kubernetes plugin
 serviceAccountName: default
