--- a/incubator/mysql/values.yaml
+++ b/incubator/mysql/values.yaml
@@ -2,7 +2,21 @@
 ## ref: https://hub.docker.com/r/bitnami/mysql/tags/
 ##
 ## Default: none
-image: bitnami/mysql:5.7.18-r4
+image:
+  registry: docker.io
+  repository: bitnami/mysql
+  tag: 5.7.18
+  ## Specify a imagePullPolicy
+  ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+  ##
+  pullPolicy: IfNotPresent
+  ## Optionally specify an array of imagePullSecrets.
+  ## Secrets must be manually created in the namespace.
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  ##
+  # pullSecrets:
+  #   - myRegistrKeySecretName 
 
 ## Specify an imagePullPolicy (Required)
 ## It's recommended to change this to 'Always' if the image tag is 'latest'
