--- a/incubator/node/values.yaml
+++ b/incubator/node/values.yaml
@@ -1,13 +1,17 @@
 ## Bitnami node image version
 ## ref: https://hub.docker.com/r/bitnami/node/tags/
 ##
-image: bitnami/node:9.5.0-r0-prod
-gitImage: alpine/git
+image:
+  registry: docker.io
+  repository: bitnami/node
+  tag: 9.5.0-prod
+  pullPolicy: IfNotPresent
 
-## Specify a imagePullPolicy
-## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-##
-imagePullPolicy: IfNotPresent
+gitImage:
+  registry:
+  repository: alpine/git
+  tag: latest
+  pullPolicy: IfNotPresent
 
 ## Git repository http/https
 ##
