--- a/incubator/node/requirements.yaml
+++ b/incubator/node/requirements.yaml
@@ -4,5 +4,5 @@ dependencies:
   version: 0.4.x
   condition: mongodb.install
 - name: bitnami-common
-  repository: https://charts.bitnami.com/stable
+  repository: https://charts.bitnami.com/library
   version: 0.0.x
