--- a/incubator/elasticsearch/values-production.yaml
+++ b/incubator/elasticsearch/values-production.yaml
@@ -5,44 +5,27 @@ name: elastic
 
 ## Elasticsearch image
 ## ref: https://hub.docker.com/r/bitnami/elasticsearch/tags/
-<<<<<<< HEAD
-image:
-  registry: docker.io
-  repository: bitnami/elasticsearch
-  tag: 5.5.2
-  ## Specify a imagePullPolicy
-  ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
-  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-  ##
-  pullPolicy: IfNotPresent
-  ## Optionally specify an array of imagePullSecrets.
-  ## Secrets must be manually created in the namespace.
-  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-  ##
-  # pullSecrets:
-  #   - myRegistrKeySecretName 
-=======
-image: juanariza131/elasticsearch:5.5.2-r8
+image: juanariza131/elasticsearch:6.1.2
  
 ## Specify a imagePullPolicy
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 pullPolicy: IfNotPresent
->>>>>>> Create production-ready ES chart
+
 
 ## The serviceAccountName to be used, required by the elasticsearch-cloud-kubernetes plugin
 serviceAccountName: default
 ## Comma seperated list of plugins
 ## ref: https://github.com/bitnami/bitnami-docker-elasticsearch#environment-variables
 ##
-plugins: io.fabric8:elasticsearch-cloud-kubernetes:5.5.2
+plugins: io.fabric8:elasticsearch-cloud-kubernetes:6.1.2
 ## Customize elasticsearch configuration
 ## ref: https://www.elastic.co/guide/en/elasticsearch/reference/current/settings.html
 config:
 
 master:
   name: master
-  replicas: 2
+  replicas: 3
   heapSize: 128m
   antiAffinity: "soft"
   ## Configure resource requests and limits
@@ -72,7 +55,7 @@ coordinating:
 
 data:
   name: data
-  replicas: 2
+  replicas: 3
   heapSize: 1024m
   antiAffinity: "soft"
   ## Configure resource requests and limits
@@ -112,6 +95,7 @@ data:
     size: 8Gi
 
 ingest:
+  enabled: true
   name: ingest
   replicas: 2
   heapSize: 128m
@@ -125,7 +109,7 @@ ingest:
       memory: "256Mi"
 
 metrics:
-  enabled: false
+  enabled: true
   name: metrics
   image:
     name: justwatch/elasticsearch_exporter
