--- a/incubator/elasticsearch/templates/ingest-svc.yaml
+++ b/incubator/elasticsearch/templates/ingest-svc.yaml
@@ -10,11 +10,11 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   ports:
-  - name: "transport"
+  - name: transport
     port: 9300
-    targetPort: "transport"
+    targetPort: transport
   selector:
     app: "{{ template "name" . }}"
     release: "{{ .Release.Name }}"
-    component: "ingest"
+    role: "ingest"
 {{- end }}
