--- a/incubator/elasticsearch/templates/coordinating-deploy.yaml
+++ b/incubator/elasticsearch/templates/coordinating-deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: "{{ template "name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    component: "coordinating-only"
+    role: "coordinating-only"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
@@ -14,7 +14,7 @@ spec:
     metadata:
       labels:
         app: "{{ template "name" . }}"
-        component: "coordinating-only"
+        role: "coordinating-only"
         release: "{{ .Release.Name }}"
     spec:
       serviceAccountName: "{{ .Values.serviceAccountName }}"
@@ -26,7 +26,7 @@ spec:
               labelSelector:
                 matchLabels:
                   app: "{{ template "name" . }}"
-                  component: "coordinating-only"
+                  role: "coordinating-only"
                   release: "{{ .Release.Name }}"
       {{- else if eq .Values.coordinating.antiAffinity "soft" }}
       affinity:
@@ -38,7 +38,7 @@ spec:
               labelSelector:
                 matchLabels:
                   app: "{{ template "name" . }}"
-                  component: "coordinating-only"
+                  role: "coordinating-only"
                   release: "{{ .Release.Name }}"
       {{- end }}
       {{- if .Values.image.pullSecrets }}
@@ -56,8 +56,8 @@ spec:
           privileged: true
       containers:
       - name: "elasticsearch"
-        image: "{{ .Values.image }}"
-        imagePullPolicy: "{{ .Values.pullPolicy }}"
+        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         env:
         - name: ELASTICSEARCH_CLUSTER_NAME
           value: "{{ .Values.name }}"
@@ -70,7 +70,7 @@ spec:
         - name: ELASTICSEARCH_NODE_TYPE
           value: "coordinating"
         ports:
-        - name: "http"
+        - name: http
           containerPort: 9200
         - name: transport
           containerPort: 9300
