--- a/incubator/elasticsearch/values-production.yaml
+++ b/incubator/elasticsearch/values-production.yaml
@@ -1,28 +1,43 @@
+## Bitnami Elasticsearch image version
+## ref: https://hub.docker.com/r/bitnami/elasticsearch/tags/
+##
+image:
+  registry: docker.io
+  repository: bitnami/elasticsearch
+  tag: 6.2.3-r3
+  ## Specify a imagePullPolicy
+  ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
+  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+  ##
+  pullPolicy: IfNotPresent
+  ## Optionally specify an array of imagePullSecrets.
+  ## Secrets must be manually created in the namespace.
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  ##
+  # pullSecrets:
+  #   - myRegistrKeySecretName
+
 ## Elasticsearch cluster name
-## ref: https://github.com/bitnami/bitnami-docker-elasticsearch#environment-variables
 ##
 name: elastic
 
-## Elasticsearch image
-## ref: https://hub.docker.com/r/bitnami/elasticsearch/tags/
-image: juanariza131/elasticsearch:6.1.2
- 
-## Specify a imagePullPolicy
-## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-##
-pullPolicy: IfNotPresent
-
-
 ## The serviceAccountName to be used, required by the elasticsearch-cloud-kubernetes plugin
-serviceAccountName: default
+## ref: https://github.com/fabric8io/elasticsearch-cloud-kubernetes#kubernetes-auth
+##
+serviceAccountName: elastic
+
 ## Comma seperated list of plugins
 ## ref: https://github.com/bitnami/bitnami-docker-elasticsearch#environment-variables
 ##
-plugins: io.fabric8:elasticsearch-cloud-kubernetes:6.1.2
+plugins: io.fabric8:elasticsearch-cloud-kubernetes:6.2.3
+
 ## Customize elasticsearch configuration
 ## ref: https://www.elastic.co/guide/en/elasticsearch/reference/current/settings.html
+##
 config:
 
+## Elasticsearch master-eligible node parameters
+##
 master:
   name: master
   replicas: 3
@@ -35,7 +50,25 @@ master:
     requests:
       cpu: 25m
       memory: "256Mi"
+  ## Elasticsearch master-eligible Liveness Probe
+  livenessProbe:
+    enabled: true
+  #  initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
+  ## Elasticsearch master-eligible Readiness Probe
+  readinessProbe:
+    enabled: true
+  #  initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
 
+## Elasticsearch coordinating-only node parameters
+##
 coordinating:
   name: coordinating-only
   replicas: 2
@@ -52,7 +85,25 @@ coordinating:
     requests:
       cpu: 25m
       memory: "256Mi"
+  ## Elasticsearch master-eligible Liveness Probe
+  livenessProbe:
+    enabled: true
+    initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
+  ## Elasticsearch master-eligible Readiness Probe
+  readinessProbe:
+    enabled: true
+    initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
 
+## Elasticsearch data node parameters
+##
 data:
   name: data
   replicas: 3
@@ -65,6 +116,22 @@ data:
     requests:
       cpu: 25m
       memory: "1152Mi"
+  ## Elasticsearch master-eligible Liveness Probe
+  livenessProbe:
+    enabled: true
+    initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
+  ## Elasticsearch master-eligible Readiness Probe
+  readinessProbe:
+    enabled: true
+    initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
   ## Enable persistence using Persistent Volume Claims
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
   ##
@@ -94,6 +161,8 @@ data:
     ##
     size: 8Gi
 
+## Elasticsearch ingest node parameters
+##
 ingest:
   enabled: true
   name: ingest
@@ -107,6 +176,22 @@ ingest:
     requests:
       cpu: 25m
       memory: "256Mi"
+  ## Elasticsearch master-eligible Liveness Probe
+  livenessProbe:
+    enabled: true
+    initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
+  ## Elasticsearch master-eligible Readiness Probe
+  readinessProbe:
+    enabled: true
+    initialDelaySeconds: 90
+  #  periodSeconds: 10
+  #  timeoutSeconds: 5
+  #  successThreshold: 1
+  #  failureThreshold: 5
 
 metrics:
   enabled: true
