--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -21,8 +21,10 @@ data:
   mariadb-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
   {{- end }}
+  {{- if .Values.replication.enabled }}
   {{- if .Values.replication.password }}
   mariadb-replication-password: "{{ .Values.replication.password | b64enc }}"
   {{- else }}
   mariadb-replication-password: "{{ randAlphaNum 10 | b64enc }}"
+  {{- end }}
   {{- end }}
