Enable support for existing secrets

--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if (not .Values.root.existingSecret) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -28,3 +29,4 @@ data:
   mariadb-replication-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
   {{- end }}
+{{- end }}
